| Bug #43367 | Too many loglevels unintentionally enabled in ndbd | ||
|---|---|---|---|
| Submitted: | 4 Mar 2009 11:48 | Modified: | 13 Mar 2009 8:54 |
| Reporter: | Magnus Blåudd | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | OS: | Any | |
| Assigned to: | Magnus Blåudd | CPU Architecture: | Any |
[4 Mar 2009 11:55]
Magnus Blåudd
Actually, we can just remove those lines sinc and use the default setting which is to enable from LL_INFO to LL_ALERT
[4 Mar 2009 11:57]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/68223 2908 Magnus Svensson 2009-03-04 Bug#43367 Too many loglevels unintentionally enabled in ndbd - Remove the code that enables which loglevels to use. Instead rely on the default in Logger which is to enable LL_INFO -> LL_CRITICAL modified: storage/ndb/src/kernel/main.cpp
[4 Mar 2009 12:12]
Bugs System
Pushed into 5.1.32-ndb-6.4.4 (revid:msvensson@mysql.com-20090304120201-wu5hb4sfo972rxpp) (version source revid:msvensson@mysql.com-20090304115648-wrcyh6thb7aa95za) (merge vers: 5.1.32-ndb-6.4.4) (pib:6)
[13 Mar 2009 8:54]
Jonas Oreland
pushed, and doesnt really need docs

Description: When ndbd starts it enables LoggerLevel's from LL_ON to LL_CRITICAL(including LL_DEBUG), but it actually only intends to enable LL_INFO, LL_WARNING, LL_ERROR and Ll_CRITICAL How to repeat: Add g_eventLogger->debug("hi") to main somewhere after the calls to enable - it will be printed. Suggested fix: - g_eventLogger->enable(Logger::LL_ON, Logger::LL_INFO); - g_eventLogger->enable(Logger::LL_ON, Logger::LL_CRITICAL); - g_eventLogger->enable(Logger::LL_ON, Logger::LL_ERROR); - g_eventLogger->enable(Logger::LL_ON, Logger::LL_WARNING); + g_eventLogger->enable(Logger::LL_INFO, Logger::LL_CRITICAL);