Bug#43367 Too many loglevels unintentionally enabled in ndbd  - Remove the code that enables which loglevels to use. Instead rely on the default    in Logger which is to enable LL_INFO -> LL_CRITICAL